renamed files. fixed small css issues

--- a/proffesional template/home.html
+++ b/proffesional template/home.html
@@ -2,39 +2,37 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<title>
-			Homepage
-		</title>
+		<title>Homepage</title>
 		<link rel='stylesheet' href='styles.css' type='text/css'>
 	</head>
 	<body>
-		<nav></nav>
-		<aside></aside>
 		<div id="wrapper">
 			<header>
 				<p id="tel">
 					123-456-7890
 				</p>
-				<div>
-					<img src="images/logoUp.jpg" alt="logo" id="logo">
+				<nav>
+					<a href="#home">
+						<img src="images/main-logo.jpg" alt="logo" id="logo" />
+					</a>
 					<ul>
 						<li>
-							<a href="contact.html">CONTACT</a>
+							<a href="#contact">CONTACT</a>
 						</li>
 						<li>
-							<a href="portfolio.html">PORTFOLIO</a>
+							<a href="#portfolio">PORTFOLIO</a>
 						</li>
 						<li>
-							<a href="services.html">SERVICES</a>
+							<a href="#services">SERVICES</a>
 						</li>
 						<li>
-							<a href="about.html">ABOUT</a>
+							<a href="#about">ABOUT</a>
 						</li>
 						<li>
-							<a href="home.html" id="page"><img src="images/home.jpg" alt="home" /></a>
+							<a href="#home" id="page"></a>
 						</li>
 					</ul>
-				</div>
+				</nav>
 			</header>
 			<div id="advertisement">
 				<section>
@@ -43,13 +41,30 @@
 						take your website to the<br>
 						<span>NEW HEIGHT OF SUCCESS</span>
 					</p>
-					<a href="http://www.start.com" >
-						<img src="images/start.jpg" alt="start" id="start-button">
-					</a>
+					<a href="#" id="button-start"> </a>
 				</section>
+				<div id="ball">
+					<div id="position-cs-buttons">
+						<p>
+							U Design + V Code
+						</p>
+						<div class="cs-buttons">
+							<a href="#"><img src="images/ball-white.jpg" alt="blue ball" /></a> 
+							<a href="#"><img src="images/ball-blue.jpg" alt="blue ball" /></a> 
+							<a href="#"><img src="images/ball-blue.jpg" alt="blue ball" /></a> 
+							<a href="#"><img src="images/ball-blue.jpg" alt="white ball" /></a>
+						</div>
+					</div>
+					<div id="carousel">
+						<a href="#ad-first"><img src="images/ad.jpg" alt="ad" /></a> 
+						<a href="#ad-second"><img src="images/ad1.jpg" alt="ad second" /></a> 
+						<a href="#ad-third"><img src="images/ad.jpg" alt="ad third" /></a> 
+						<a href="#ad-fourth"><img src="images/ad1.jpg" alt="ad fourth" /></a> 
+					</div>
+				</div>				
 				<div id="blurbs">
 					<div class="reason">
-						<img src="images/purse.jpg" alt="purse">
+						<img src="images/purse.jpg" alt="purse" />
 						<h2>
 							Save big with us
 						</h2>
@@ -58,7 +73,7 @@
 						</p>
 					</div>
 					<div class="reason">
-						<img src="images/clock.jpg" alt="clock">
+						<img src="images/clock.jpg" alt="clock" />
 						<h2>
 							Always on time
 						</h2>
@@ -67,113 +82,97 @@
 						</p>
 					</div>
 					<div class="reason">
-						<img src="images/telephone.jpg" alt="telephone">
+						<img src="images/telephone.jpg" alt="telephone" />
 						<h2>
 							Contact Us
 						</h2>
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 						</p>
-					</div><img src="images/ad-shadow.jpg" alt="ad shadow" id="shadow">
-				</div>
-				<div id="ball">
-					<div id="position-cs-buttons">
-						<p>
-							U Design + V Code
-						</p>
-						<div class="cs-buttons">
-
-							<a href="#"><img src="images/ball-white.jpg" alt="blue ball"></a> 
-							<a href="#"><img src="images/ball-blue.jpg" alt="blue ball"></a> 
-							<a href="#"><img src="images/ball-blue.jpg" alt="blue ball"></a> 
-							<a href="#"><img src="images/ball-blue.jpg" alt="white ball"></a>
-						</div>
 					</div>
-					<div id="carousel">
-						<a href="#ad-first"><img src="images/ad.jpg" alt="ad"></a> 
-						<a href="#ad-second"><img src="images/ad1.jpg" alt="ad second"></a> 
-						<a href="#ad-third"><img src="images/ad.jpg" alt="ad third"></a> 
-						<a href="#ad-fourht"><img src="images/ad1.jpg" alt="ad fourth"></a> 
-					</div>
+					<img src="images/ad-shadow.jpg" alt="ad shadow" id="shadow" />
 				</div>
 				<div id="columns">
 					<div class="col">
 						<h1>
 							Who we are?
-						</h1><img src="images/colon1.jpg" alt="Web Design Example">
+						</h1>
+						<img src="images/left-column.jpg" alt="Web Design Example" />
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed suscipit nibh nec turpis gravida ac ornare felis tristique. Nullam convallis consequat scelerisque. Pellentesque vestibulum convallis iaculis. Nullam condimentum tincidunt orci, ut pretium mi sollicitudin id. Sed nec lectus ac enim malesuada mollis.
 						</p>
-						<a href="http://www.readmore.com"><img src="images/read_more.jpg" alt="read more" /></a>
+						<a href="#" id="read-more"></a>
 					</div>
 					<div class="col">
 						<h1>
 							What we do?
-						</h1><img src="images/colon2.jpg" alt="Web Design Example">
+						</h1>
+						<img src="images/center-column.jpg" alt="Web Design Example" />
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed suscipit nibh nec turpis gravida ac ornare felis tristique. Nullam convallis consequat scelerisque. Pellentesque vestibulum convallis iaculis. Nullam condimentum tincidunt orci.
 						</p>
 						<ul>
 							<li>
-								<a href="http://www.tut.by">Website design</a>
+								<a href="#">Website design</a>
 							</li>
 							<li>
-								<a href="http://www.tut.by">Blog design</a>
+								<a href="#">Blog design</a>
 							</li>
 							<li>
-								<a href="http://www.tut.by">Branding design</a>
+								<a href="#">Branding design</a>
 							</li>
 						</ul>
 					</div>
 					<div class="col">
 						<h1>
 							Why hire us?
-						</h1><img src="images/colon3.jpg" alt="Web Design Example">
+						</h1>
+						<img src="images/right-column.jpg" alt="Web Design Example" />
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed suscipit nibh nec turpis gravida ac ornare felis tristique. Nullam convallis consequat scelerisque. Pellentesque vestibulum convallis iaculis. Nullam condimentum tincidunt orci, ut pretium mi sollicitudin id. Sed nec lectus ac enim malesuada mollis.
 						</p>
-						<a href="http://www.readmore.com"><img src="images/read_more.jpg" alt="read more" /></a>
+						<a href="#" id="read-more"></a>
 					</div>
 				</div>
 				<footer>
-					<div id="nav">
-						<div id="column1">
+					<div id="navigation">
+						<div id="left-column">
 							<h2>
 								Browse Site
 							</h2>
 							<ul>
 								<li>
-									<a href="http://www.google.com">About our conpany</a>
+									<a href="#">About our conpany</a>
 								</li>
 								<li>
-									<a href="http://www.google.com">Contact us</a>
+									<a href="#">Contact us</a>
 								</li>
 								<li>
-									<a href="http://www.google.com">Our Portforio</a>
+									<a href="#">Our Portforio</a>
 								</li>
 								<li>
-									<a href="http://www.google.com">Our Prices</a>
+									<a href="#">Our Prices</a>
 								</li>
 								<li>
-									<a href="http://www.google.com">Online quote form</a>
+									<a href="#">Online quote form</a>
 								</li>
 								<li>
-									<a href="http://www.google.com">Client Testimonials</a>
+									<a href="#">Client Testimonials</a>
 								</li>
 							</ul>
 						</div>
-						<div id="column2">
+						<div id="center-column">
 							<h2>
 								Our Testimonials
 							</h2>
 							<p>
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed suscipit nibh nec turpis gravida ac ornare felis tristique. Nullam convallis consequat scelerisque. Pellentesque vestibulum convallis iaculis. Nullam condimentum tincidunt orci, ut pretium mi sollicitudin id. Sed nec lectus ac enim malesuada mollis. Etiam egestas purus vitae eros mollis et elementum tellus facilisis. In iaculis, sapien ut tincidunt convallis, enim ipsum pretium libero, sed mattis libero augue eget metus. Sed rhoncus ultrices metus ac interdum.
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed suscipit nibh nec turpis gravida ac ornare felis tristique. Nullam convallis consequat scelerisque. Pellentesque vestibulum convallis iaculis. Nullam condimentum tincidunt orci, ut pretium mi sollicitudin id. Sed nec lectus ac enim malesuada mollis. Etiam egestas purus vitae. 
 							</p>
 							<p>
 								<span>Rafi, GraphicsFuel.com</span>
 							</p>
 						</div>
-						<div id="column3">
+						<div id="right-column">
 							<h2>
 								From Our Blog
 							</h2>
@@ -181,7 +180,7 @@
 								July 6, 2010
 							</p>
 							<p>
-								<a href="http://www.blog.com">Lorem ipsum dolor sit amet, consectetur</a> adipiscing elit. Maecenas placerat vehicula magna, quis hendrerit risus commodo eu. Vivamus ultricies porttitor dui...
+								<a href="#">Lorem ipsum dolor sit amet, consectetur</a> adipiscing elit. Maecenas placerat vehicula magna, quis hendrerit risus commodo eu. Vivamus...
 							</p>
 							<p>
 								&nbsp;
@@ -190,18 +189,19 @@
 								July 6, 2010
 							</p>
 							<p>
-								<a href="http://www.blog.com">Lorem ipsum dolor sit amet, consectetur</a> adipiscing elit. Maecenas placerat vehicula magna, quis hendrerit risus commodo eu. Vivamus ultricies porttitor dui...
+								<a href="#">Lorem ipsum dolor sit amet, consectetur</a> adipiscing elit. Maecenas placerat vehicula magna, quis hendrerit risus commodo eu. Vivamus...
 							</p>
 						</div>
 					</div>
 					<div id="copyright">
 						<p>
-							Copyright © 2010 Business. All rights reserved. Designed by GraphicFuel.com
-						</p><img src="images/logo-down.jpg" alt="logo">
+							Copyright &copy; 2010 Business. All rights reserved. Designed by GraphicFuel.com
+						</p>
+						<img src="images/minor-logo.jpg" alt="logo" />
 						<div id="social">
-							<a href="http://www.facebook.com"><img src="images/facebook.jpg" alt="facebook"> </a>
-							<a href="http://www.linkedin.com"><img src="images/linkedin.jpg" alt="linkedin"> </a>
-							<a href="http://twitter.com"><img src="images/twitter.jpg" alt="twitter"> </a>
+							<a href="http://www.facebook.com"><img src="images/facebook.jpg" alt="facebook" /> </a>
+							<a href="http://www.linkedin.com"><img src="images/linkedin.jpg" alt="linkedin" /> </a>
+							<a href="http://twitter.com"><img src="images/twitter.jpg" alt="twitter" /> </a>
 						</div>
 					</div>
 				</footer>
