contact-form: created field-forms, changes text styles, added gradients

--- a/proffesional template/home.html
+++ b/proffesional template/home.html
@@ -34,10 +34,11 @@
 					</ul>
 				</nav>
 			</header>
-			<div id="advertisement">
+			<div>
 				<section>
 					<p>
 						We have what it takes to<br>
+					<p>
 						take your website to the<br>
 						<span>NEW HEIGHT OF SUCCESS</span>
 					</p>
@@ -101,7 +102,7 @@
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed suscipit nibh nec turpis gravida ac ornare felis tristique. Nullam convallis consequat scelerisque. Pellentesque vestibulum convallis iaculis. Nullam condimentum tincidunt orci, ut pretium mi sollicitudin id. Sed nec lectus ac enim malesuada mollis.
 						</p>
-						<a href="#" id="read-more"></a>
+						<a href="#" class="read-more">READ MORE</a>
 					</div>
 					<div class="col">
 						<h1>
@@ -131,7 +132,7 @@
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed suscipit nibh nec turpis gravida ac ornare felis tristique. Nullam convallis consequat scelerisque. Pellentesque vestibulum convallis iaculis. Nullam condimentum tincidunt orci, ut pretium mi sollicitudin id. Sed nec lectus ac enim malesuada mollis.
 						</p>
-						<a href="#" id="read-more"></a>
+						<a href="#" class="read-more"></a>
 					</div>
 				</div>
 				<footer>
